# ray-tracing

./: .gitignore  CMakeLists.txt  README.md
dep/SDL/include/: SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_clipboard.h  SDL_cpuinfo.h  SDL_egl.h  SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_loadso.h  SDL_locale.h  SDL_metal.h  SDL_mouse.h  SDL_mutex.h  SDL_opengles2_gl2ext.h  SDL_pixels.h  SDL_render.h  SDL_rwops.h  SDL_shape.h  SDL_stdinc.h  SDL_surface.h  SDL_test_common.h  SDL_test_memory.h  SDL_thread.h  SDL_video.h  SDL_vulkan.h
dep/STB/include/: stb_image.h  stb_image_write.hpp
src/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.hpp  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.hpp  Camera.cpp  Camera.hpp  CheckerTexture.cpp  CheckerTexture.hpp  Dielectric.cpp  Dielectric.hpp  Hittable.cpp  Hittable.hpp  HittableList.cpp  HittableList.hpp  ImageTexture.cpp  ImageTexture.hpp  Lambertian.cpp  Lambertian.hpp  Material.hpp  MathUtils.cpp  MathUtils.hpp  Metal.cpp  Metal.hpp  MovingSphere.cpp  MovingSphere.hpp  NoiseTexture.cpp  NoiseTexture.hpp  OffscreenBuffer.cpp  OffscreenBuffer.hpp  Perlin.cpp  Perlin.hpp  RNG.cpp  RNG.hpp  Ray.cpp  Ray.hpp  STB.cpp  STB.h  SolidColor.cpp  SolidColor.hpp  Sphere.cpp  (+11 more)
